# test-unity3d-rust

./: .gitignore  LICENSE  README.md  bash_cfg  run.sh  unity-logs.sh
ProjectSettings/: EditorBuildSettings.asset  (+1 more)
rust/: Cargo.toml
rust/c_sharp/CSharp/: Program.cs  Rust.cs
rust/c_sharp/CSharp/Properties/: AssemblyInfo.cs
rust/examples/: flatbuffer_usage.rs
rust/ffi/: Cargo.toml
rust/ffi-flap/: Cargo.toml
rust/ffi-flap/generated_dotnet/: ffi_domain_2.cs
rust/ffi-flap/src/: glue.rs.in  lib.rs
rust/ffi/examples/: ffi_context_connect_test.rs  ffi_context_in_server_mode.rs
rust/ffi/src/: lib.rs
rust/ffi/src/client/: mod.rs
rust/ffi/src/ffi/: ffi_utils.rs  mod.rs
rust/ffi/tests/: serialization_tests.rs
rust/game/: Cargo.toml
rust/game/examples/: client_connects.rs
rust/game/src/: lib.rs  schemas.rs
rust/game/src/binary_protocol/: mod.rs
rust/game/src/client/: mod.rs
rust/game/src/schemas/: packages_generated.rs  requests_generated.rs  responses_generated.rs
rust/scripts/: release-to-unity3d.sh  run-python.sh
rust/server/: Cargo.toml
rust/server/src/: main.rs
rust/server/src/binary_protocol/: mod.rs
rust/server/src/server/: mod.rs  server_socket.rs
rust/src/: debug.rs  lib.rs  main.rs  schema_2_generated.rs  schema_generated.rs  schemas.rs  server.rs  server_ffi.rs  test_ffi.rs
rust/src/ffi/: mod.rs
rust/src/game/: mod.rs
rust/src/schemas/: mod.rs  packages_2_generated.rs  packages_3_generated.rs  packages_generated.rs  requests_generated.rs  responses_generated.rs  server_generated.rs
rust/src/server/: mod.rs  server_ffi.rs  server_sockets.rs
rust/tests/: schema_serialization.rs  serialization_tests.rs  serialization_tests_2.rs  serialization_tests_3.rs
(+126 files in other folders)
