[package]
name = "rustlib"
version = "0.1.0"
authors = ["sisso <sisso@sisso.com.br>"]
edition = "2018"

# need to be commented to run example or tests :/
[lib]
name="ffi_server"
crate-type = ["bin", "lib", "cdylib"]

[dependencies]
libc = "0.2.*"
flatbuffers = "0.6.*"
bincode = "1.2.1"
serde = { version = "1.0.*", features = ["derive"] }