[package]
name = "server"
version = "0.1.0"
authors = ["sisso <sissobr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

game = { version = "*", path = "../game" }
logs = { version = "*", path = "../logs" }

base64 = "0.12.*"

rand = "0.7"
